tdf#104533: Fix font metrics for non-SFNT fonts

They can still be used with the old layout engine, so fallback to old
code when we encounter one of them. Not needed on master as the old
layout engine is gone there.

Change-Id: Ibe3e4772cb519843eeb44cfc7efd912ae9737b69